[package]
name = "csv_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev_dependencies]
rand = "0.8"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bitvec = "1"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_repr = "0.1"
sled = "0.34"
sys-info = "0.9"